# QColor2StdString

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  clean-build.bat  clean-build.sh  run-app.bat  run-app.sh  run-tests.bat  run-tests.sh
.specstory/history/: 2025-03-31_02-16-qt-static-lib-and-ui-color-conversion.md
QColor2StdString/: build.bat
QColor2StdString/app/: mainwindow.cpp
app/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
lib/: CMakeLists.txt  qcolor2stdstring.cpp  qcolor2stdstring.h  themecolors.cpp  themecolors.h
test/: CMakeLists.txt  qcolor2stdstring_test.cpp
